# queue-app

./: .firebaserc  CLAUDE.md  WRAPUP_PLAN.md  firebase.json  firestore.rules  latest.json  release.sh
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
public/: index.html  mobile.html  overlay.html
public/css/: app.css
public/js/: breaks.js  calendar.js  categories.js  constants.js  endday.js  firebase.js  gcal.js  main.js  mobile.js  persistence.js  render.js  sidequest.js  state.js  streak.js  taskactions.js  utils.js  wrapup.js
