[package]
name = "queue"
version = "0.1.23"
edition = "2021"

[lib]
name = "queue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
tokio = { version = "1", features = ["net", "io-util", "time"] }
window-vibrancy = "0.5"
